TP-WIK-DPS-TP04/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployement
  labels:
    app_name: appli
spec:
  replicas: 4
  selector:
    matchLabels:
      app_name: appli
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app_name: appli
    spec:
      containers:
        - name: app
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
