TP-WIK-DPS-TP04/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
spec:
  containers:
    - name: pod
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 8080
