TP-WIK-DPS-TP04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app_name: appli
spec:
  selector:
    app_name: appli
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8080
